# FractalCreator

./: CMakeLists.txt  Dockerfile  README.md
include/: Area.h  BurningShip.h  BurningShipFractal.h  Controller.h  Creator.h  Fractal.h  FractalRow.h  FractalType.h  Image.h  Job.h  JobManager.h  JobQueue.h  MandelbrotSet.h  MandelbrotSetFractal.h  Renderer.h  utils.h
src/: Area.h  BurningShip.cpp  BurningShipFractal.cpp  Controller.cpp  Creator.cpp  Fractal.cpp  FractalCreator.cpp  FractalCreator.h  FractalType.cpp  Graphics.cpp  Graphics.h  Image.cpp  Job.cpp  JobManager.cpp  JobQueue.cpp  MandelbrotSet.cpp  MandelbrotSetFractal.cpp  Renderer.cpp  main.cpp  utils.cpp  utils.h
